Restructure scripts